feat: more experimentation